# routes/api.php
@@ -18,7 +18,7 @@ Route::apiResource('comments',CommentController::class);
 Route::apiResource('nested-comments',NestedCommentController::class);
 Route::get('category',[CategoryController::class, 'index']);
 Route::get('search', [SearchController::class,'index']);
-Route::get('/find-post-by-comment/{user}',[SearchController::class,'userPost']);
+Route::get('/find-post-by-comment',[SearchController::class,'userPost']);
 
 Route::post('/image-upload',[ImageController::class,'upload']);
 Route::delete('/image-delete',[ImageController::class,'destroy']);
